# neuron-old

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
example/: CMakeLists.txt
example/src/: main.cpp
libs/: CMakeLists.txt
src/neuron/: neuron.cpp  neuron.hpp
src/neuron/graphics/: gcontext.cpp  gcontext.hpp
src/neuron/math/: utils.cpp  utils.hpp
src/neuron/os/: window.cpp  window.hpp
src/neuron/utils/: utils.hpp
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/neuron/tests/unit/: basic_unit.cpp
